# linked-sqlserver-dialect

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
linked_sqlserver_dialect/: __init__.py  base.py  pyodbc.py
mssql/: init.sh  primary.sql  remote.sql
scripts/: smoke_test.py
tests/: conftest.py  test_reflection.py
